ESTE ES EL CAMBIO FINAL

--- a/testfile2.html
+++ b/testfile2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    JAJAJAJAJA ESTOS SON CAMBIOS QUE SUBIERON EN EL MISMO ARCHIVO
+    <div>ESTOS SON CAMBIOS EN LOCAL FILE 2</div>
 </body>
 </html>
